--- a/ui/src/style/layout/_view.scss
+++ b/ui/src/style/layout/_view.scss
@@ -18,6 +18,7 @@
         max-width: 1500px;
 
         > * {
+            width: 100%;
             flex-grow: 1;
         }
     }
